kubernetes/apps/default/fenrus/app/fenrus-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -c
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: fenrus
  name: fenrus
spec:
  ports:
    - name: "3000"
      port: 3000
      targetPort: 3000
  selector:
    io.kompose.service: fenrus
status:
  loadBalancer: {}
