kubernetes/apps/default/fenrus/app/fenrus-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main
  annotations:
    kubernetes.io/ingress.class: nginx
    external-dns.alpha.kubernetes.io/target: "ingress.${SECRET_DOMAIN}"
spec:
  rules:
    - host: home.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: home
                port:
                  number: 3000
  tls:
    - hosts:
        - home.${SECRET_DOMAIN}
#      secretName: tls-secret
