kubernetes/apps/default/fenrus/app/fenrus-default-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: fenrus-default
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/fenrus-default: "true"
  podSelector:
    matchLabels:
      io.kompose.network/fenrus-default: "true"
